fixed reps visual bug on smaller screens

--- a/flask_app/Static/style.css
+++ b/flask_app/Static/style.css
@@ -71,17 +71,15 @@ html {
 .reps {
         text-align: center;
         height: 10vh;
-        width: 100%;
-        border-right: 2px solid red;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
+        width: 100vw;
+
         box-shadow: 0px 0px 50px red;
         display: flex;
         justify-content: space-between;
         align-items: center;
         background-color: black;
         color: white;
-        margin: 0 0 5rem 0;
+        margin: 0 0 0 0;
         padding: 0;
     }
 
@@ -202,6 +200,20 @@ html {
     overflow-y: auto;
 }
 
+.in-office {
+    top: -25px;
+    right: 0;
+}
+
+.front-page-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    height: 75vh;
+    gap: 20px;
+    text-align: center;
+}
 #myInput {
     box-sizing: border-box;
     background-image: url('searchicon.png');
